--- a/infra/docker/Dockerfile.tts
+++ b/infra/docker/Dockerfile.tts
@@ -30,19 +30,19 @@ RUN pip install --no-cache-dir --upgrade pip wheel && \
 # -----------------------------------------------------------------------------
 # Stage 2: Runtime image
 # -----------------------------------------------------------------------------
-FROM nvidia/cuda:12.1.0-runtime-ubuntu22.04 as runtime
+# -----------------------------------------------------------------------------
+# Stage 2: Runtime image
+# -----------------------------------------------------------------------------
+FROM python:3.11-slim as runtime
 
 # Prevent interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3.11 \
-    python3.11-venv \
     libsndfile1 \
     ca-certificates \
-    && rm -rf /var/lib/apt/lists/* \
-    && ln -sf /usr/bin/python3.11 /usr/bin/python
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
