--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
     "mypy>=1.8.0",
     "pre-commit>=3.6.0",
     "locust>=2.20.0",
+    "hypothesis>=6.92.0",
 ]
 anthropic = [
     "anthropic>=0.18.0",
