--- a/infra/docker/Dockerfile.tts
+++ b/infra/docker/Dockerfile.tts
@@ -2,13 +2,39 @@
 
 # =============================================================================
 # TTS Service Dockerfile
-# Multi-stage build for VibeVoice-Realtime TTS inference
+# Multi-architecture build for VibeVoice-Realtime TTS inference
+# Supports: x86_64 (CUDA), ARM64 (Apple Silicon MPS)
 # =============================================================================
 
+# Build arguments for multi-architecture support
+ARG TARGETARCH
+ARG TARGETPLATFORM
+
 # -----------------------------------------------------------------------------
-# Stage 1: Build dependencies
+# Stage 1: Architecture-specific base images
 # -----------------------------------------------------------------------------
-FROM python:3.11-slim as builder
+# CUDA base for x86_64 (NVIDIA GPUs)
+FROM nvidia/cuda:12.1.0-base-ubuntu22.04 as base-amd64
+ENV CUDA_AVAILABLE=1
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3.11 \
+    python3.11-venv \
+    python3-pip \
+    && rm -rf /var/lib/apt/lists/*
+
+# ARM64 base for Apple Silicon (MPS support)
+FROM python:3.11-slim as base-arm64
+ENV CUDA_AVAILABLE=0
+
+# Select base image based on target architecture
+FROM base-${TARGETARCH} as base
+
+# -----------------------------------------------------------------------------
+# Stage 2: Build dependencies
+# -----------------------------------------------------------------------------
+FROM base as builder
+
+ARG TARGETARCH
 
 WORKDIR /build
 
@@ -16,33 +42,61 @@ WORKDIR /build
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     git \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 
 # Create virtual environment
-RUN python -m venv /opt/venv
+RUN python3.11 -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
-# Install Python dependencies
+# Upgrade pip and install build tools
+RUN pip install --no-cache-dir --upgrade pip wheel setuptools
+
+# Install PyTorch with appropriate backend for architecture
 COPY pyproject.toml ./
-RUN pip install --no-cache-dir --upgrade pip wheel && \
-    pip install --no-cache-dir .
+RUN if [ "$TARGETARCH" = "amd64" ]; then \
+        # x86_64: Install PyTorch with CUDA support
+        pip install --no-cache-dir torch>=2.1.0 torchaudio>=2.1.0 --index-url https://download.pytorch.org/whl/cu121; \
+    elif [ "$TARGETARCH" = "arm64" ]; then \
+        # ARM64: Install PyTorch with MPS support (CPU wheels work on Apple Silicon)
+        pip install --no-cache-dir torch>=2.1.0 torchaudio>=2.1.0; \
+    else \
+        echo "Unsupported architecture: $TARGETARCH" && exit 1; \
+    fi
+
+# Install remaining dependencies
+RUN pip install --no-cache-dir .
 
 # -----------------------------------------------------------------------------
-# Stage 2: Runtime image
+# Stage 3: Architecture-specific runtime base images
 # -----------------------------------------------------------------------------
-FROM nvidia/cuda:12.1.0-runtime-ubuntu22.04 as runtime
+# CUDA runtime for x86_64
+FROM nvidia/cuda:12.1.0-runtime-ubuntu22.04 as runtime-base-amd64
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3.11 \
+    && rm -rf /var/lib/apt/lists/*
+
+# ARM64 runtime for Apple Silicon
+FROM python:3.11-slim as runtime-base-arm64
+
+# Select runtime base based on architecture
+FROM runtime-base-${TARGETARCH} as runtime-base
+
+# -----------------------------------------------------------------------------
+# Stage 4: Final runtime image
+# -----------------------------------------------------------------------------
+FROM runtime-base as runtime
+
+ARG TARGETARCH
 
 # Prevent interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3.11 \
-    python3.11-venv \
     libsndfile1 \
     ca-certificates \
-    && rm -rf /var/lib/apt/lists/* \
-    && ln -sf /usr/bin/python3.11 /usr/bin/python
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
@@ -58,11 +112,18 @@ WORKDIR /app
 COPY --chown=ttsuser:ttsuser src/ ./src/
 
 # Environment configuration
+# Set device to "auto" for automatic detection (CUDA on x86_64, MPS on ARM64)
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PYTHONPATH=/app/src \
     TTS_HOST=0.0.0.0 \
-    TTS_PORT=8000
+    TTS_PORT=8000 \
+    TTS_DEVICE=auto
+
+# Architecture-specific labels
+LABEL org.opencontainers.image.title="VibeVoice TTS Service" \
+      org.opencontainers.image.description="Multi-architecture TTS inference service" \
+      org.opencontainers.image.architecture="${TARGETARCH}"
 
 # Switch to non-root user
 USER ttsuser
