--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -13,30 +13,29 @@ jobs:
             - uses: actions/checkout@v4
 
             - name: Set up Python 3.11
-              uses: actions/setup-python@v4
+              uses: actions/setup-python@v5
               with:
                   python-version: "3.11"
 
             - name: Cache dependencies
-              uses: actions/cache@v3
+              uses: actions/cache@v4
               with:
                   path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+                  key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
                   restore-keys: |
                       ${{ runner.os }}-pip-
 
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install ruff mypy types-requests types-PyYAML
-                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-                  if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+                  pip install -e ".[all]"
+                  pip install types-requests types-PyYAML
 
             - name: Run Ruff
               run: ruff check .
 
             - name: Run Mypy
-              run: mypy .
+              run: mypy src
 
     test:
         runs-on: ubuntu-latest
@@ -44,30 +43,28 @@ jobs:
             - uses: actions/checkout@v4
 
             - name: Set up Python 3.11
-              uses: actions/setup-python@v4
+              uses: actions/setup-python@v5
               with:
                   python-version: "3.11"
 
             - name: Cache dependencies
-              uses: actions/cache@v3
+              uses: actions/cache@v4
               with:
                   path: ~/.cache/pip
-                  key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+                  key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
                   restore-keys: |
                       ${{ runner.os }}-pip-
 
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install pytest pytest-cov
-                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-                  if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+                  pip install -e ".[all]"
 
             - name: Run Tests
-              run: pytest --cov=. --cov-report=xml
+              run: pytest --cov=src --cov-report=xml
 
             - name: Upload coverage to Codecov
-              uses: codecov/codecov-action@v3
+              uses: codecov/codecov-action@v4
               with:
                   file: ./coverage.xml
                   fail_ci_if_error: false
