fix: Add default values for TARGETARCH in Dockerfile to prevent build failures

--- a/infra/docker/Dockerfile.tts
+++ b/infra/docker/Dockerfile.tts
@@ -7,8 +7,8 @@
 # =============================================================================
 
 # Build arguments for multi-architecture support
-ARG TARGETARCH
-ARG TARGETPLATFORM
+ARG TARGETARCH=amd64
+ARG TARGETPLATFORM=linux/amd64
 
 # -----------------------------------------------------------------------------
 # Stage 1: Architecture-specific base images
