--- a/infra/docker/Dockerfile.agent
+++ b/infra/docker/Dockerfile.agent
@@ -22,7 +22,7 @@ RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
 # Install Python dependencies
-COPY pyproject.toml ./
+COPY pyproject.toml README.md ./
 RUN pip install --no-cache-dir --upgrade pip wheel && \
     pip install --no-cache-dir ".[anthropic]"
 
