--- a/infra/docker/Dockerfile.tts
+++ b/infra/docker/Dockerfile.tts
@@ -54,14 +54,15 @@ RUN pip install --no-cache-dir --upgrade pip wheel setuptools
 
 # Install PyTorch with appropriate backend for architecture
 COPY pyproject.toml README.md ./
-RUN if [ "$TARGETARCH" = "amd64" ]; then \
+RUN echo "Installing PyTorch for architecture: ${TARGETARCH}" && \
+    if [ "$TARGETARCH" = "amd64" ]; then \
         # x86_64: Install PyTorch with CUDA support
         pip install --no-cache-dir torch>=2.1.0 torchaudio>=2.1.0 --index-url https://download.pytorch.org/whl/cu121; \
     elif [ "$TARGETARCH" = "arm64" ]; then \
         # ARM64: Install PyTorch with MPS support (CPU wheels work on Apple Silicon)
         pip install --no-cache-dir torch>=2.1.0 torchaudio>=2.1.0; \
     else \
-        echo "Unsupported architecture: $TARGETARCH" && exit 1; \
+        echo "Error: Unsupported architecture: ${TARGETARCH}" && exit 1; \
     fi
 
 # Install remaining dependencies
