--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi>=0.43b0",
     "tenacity>=8.2.0",
     "redis>=5.0.0",
+    "vibevoice @ git+https://github.com/microsoft/VibeVoice.git",
 ]
 
 [project.optional-dependencies]
