--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,9 @@ packages = ["src/agent_app", "src/tts_service", "src/common"]
 [tool.hatch.build.targets.wheel.sources]
 "src" = ""
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [tool.ruff]
 target-version = "py311"
 line-length = 100
