--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ dependencies = [
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "httpx>=0.26.0",
-    "torch>=2.1.0",
-    "torchaudio>=2.1.0",
-    "transformers>=4.36.0",
+    "torch==2.9.1",
+    "torchaudio==2.9.1",
+    "transformers==4.57.3",
     "accelerate>=0.25.0",
     "soundfile>=0.12.1",
     "numpy>=1.26.0",
